--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -4,7 +4,8 @@
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
-    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:layout_width="fill_parent" android:layout_margin="4px" android:text="@string/aboutText" android:layout_gravity="center"></TextView>
-    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:id="@+id/textView2"  android:layout_margin="4px" android:text="@string/aboutText2" android:textSize="15px"></TextView>
+    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:text="@string/aboutText" android:layout_margin="4px" android:gravity="center|center_horizontal" android:layout_width="fill_parent"></TextView>
+    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textView2" android:text="@string/aboutText2" android:layout_margin="4px" android:gravity="center" android:layout_width="fill_parent"></TextView>
+    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textView3" android:text="@string/aboutText3" android:layout_width="fill_parent" android:gravity="center"></TextView>
     
 </LinearLayout>
