--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
   xmlns:android="http://schemas.android.com/apk/res/android">
-    
-    <item android:id="@+id/area" android:title="Area"></item><item android:id="@+id/preference" android:title="Inställningar"></item><item android:id="@+id/about" android:title="Om"></item>
-    
-    
+    <item 
+    	android:id="@+id/area" 
+    	android:title="Area">
+    </item>
+    <item 
+    	android:id="@+id/preference" 
+    	android:title="Inställningar">
+   	</item>
+   	<item 
+   		android:id="@+id/about" 
+   		android:title="Om">
+	</item>
 </menu>
