--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -9,5 +9,17 @@
      	<item>http://www.lanzen.se/LunchToday/MjardeviArea.json</item>
     	<item>http://www.lanzen.se/LunchToday/KistaArea.json</item>
   </string-array>
+   	<string-array name="pref_resturant_sortorder">
+   		<item>1</item>
+   		<item>2</item>
+   		<item>3</item>
+   		<item>4</item>
+   		<item>5</item>
+   		<item>6</item>
+   		<item>7</item>
+   		<item>8</item>
+   		<item>9</item>
+   		<item>10</item>
+    </string-array>
     
 </resources>
