--- a/LunchTodayApp/res/menu/menu.xml
+++ b/LunchTodayApp/res/menu/menu.xml
@@ -5,10 +5,10 @@
     	android:id="@+id/area" 
     	android:title="Area">
     </item>
-    <item 
+<!--     <item 
     	android:id="@+id/preference" 
     	android:title="Inställningar">
-   	</item>
+   	</item>  -->
    	<item 
    		android:id="@+id/about" 
    		android:title="Om">
