--- a/LunchTodayApp/res/layout/list_item.xml
+++ b/LunchTodayApp/res/layout/list_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/resturant_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon" />
+        android:src="@drawable/resturant_image" />
     <TextView
         android:id="@+id/resturant_name"
         android:layout_width="fill_parent"
