--- a/LunchTodayApp/res/layout/resturant_map_view.xml
+++ b/LunchTodayApp/res/layout/resturant_map_view.xml
@@ -8,7 +8,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:clickable="true"
-        android:apiKey="@string/mapAPIdebug"
+        android:apiKey="@string/mapAPIkey"
     />
     
 </LinearLayout>
