--- a/LunchTodayApp/res/layout/list_item.xml
+++ b/LunchTodayApp/res/layout/list_item.xml
@@ -3,23 +3,41 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="100dp"
     android:layout_height="wrap_content"
+    android:background="@color/black"
+    android:padding="15sp"
+>
+<!-- 
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="100dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/background_black"
     android:padding="15sp"
 >
+ -->
+<!-- 
     <ImageView
         android:id="@+id/resturant_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/resturant_image" />
+         -->
     <TextView
         android:id="@+id/resturant_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/resturant_photo"
         android:paddingBottom="5dip"
         android:textStyle="bold"
         android:textSize="20sp"/>
 
+	<LinearLayout
+	    android:id="@+id/menu_layout"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@id/resturant_name"
+	    android:orientation="vertical" />
+
+    <!-- 
     <TextView
         android:id="@+id/resturant_menu"
         android:layout_width="fill_parent"
@@ -27,5 +45,5 @@
         android:layout_below="@id/resturant_name"
         android:layout_toRightOf="@id/resturant_photo"
         android:textSize="18sp" />
-
+ -->
 </RelativeLayout>
